<resources>
    <string name="app_name">prototype</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="issue_report">Report New Issue</string>
    <string name="notification_box">Notification Box</string>
    <string name="user_center">User center</string>
    <string name="retrieving_gps_location">Retrieving GPS Location...</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="description">Description</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="user_id">User ID</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="add_picture">Add Picture</string>
    <string name="submit_report">Submit Report</string>
    <string name="enter_picture_url">Enter picture URL</string>
    <string name="picture_link">Picture Link</string>
    <string name="like_button">Like</string>
    <string name="search">Search</string>

    <string name="morning">Good morning! Wishing you a vibrant and joyful start to your day!</string>
    <string name="noon">Good noon! Hope you enjoy a delicious lunch!</string>
    <string name="afternoon">Happy afternoon! May you stay productive and focused!</string>
    <string name="evening">Good evening! Hope you have a relaxing night ahead!</string>
    <string name="night">Good night! Wishing you a peaceful and restful night, sweet dreams!</string>

</resources>